--- a/tpl/back/product-category-add.html
+++ b/tpl/back/product-category-add.html
@@ -19,32 +19,37 @@
 <script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ></script>
 <script>DD_belatedPNG.fix('*');</script>
 <![endif]-->
-<title>添加产品分类</title>
+<title>添加產品分類</title>
 </head>
 <body>
 <div class="page-container">
-	<form action="" method="post" class="form form-horizontal" id="form-user-add">
+	<div class="form form-horizontal" id="form-user-add">
 		<div class="row cl">
+		<p style="margin-bottom: 30px;margin-left: 20px;font-size: 20px;color: #bbb;">--點擊左側分類欄目來決定添加的位置</p>
 			<label class="form-label col-xs-4 col-sm-2">
 				<span class="c-red">*</span>
-				分类名称：</label>
+				分類名稱：</label>
 			<div class="formControls col-xs-6 col-sm-6">
-				<input type="text" class="input-text" value="" placeholder="" id="user-name" name="product-category-name">
+				<input type="text" class="input-text" value="" placeholder="" id="user-name" name="name">
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">备注：</label>
+			<label class="form-label col-xs-4 col-sm-2">備註：</label>
 			<div class="formControls col-xs-6 col-sm-6">
-				<textarea name="" cols="" rows="" class="textarea"  placeholder="说点什么...最少输入10个字符" onKeyUp="$.Huitextarealength(this,100)"></textarea>
+				<textarea name="remark" cols="" rows="" class="textarea"  placeholder="備註說明" onKeyUp="$.Huitextarealength(this,100)"></textarea>
 				<p class="textarea-numberbar"><em class="textarea-length">0</em>/100</p>
+				<input type="text" class="value id" name="id" value="<{$id}>">
+				<input type="text" class="value pId" name="pId" value="<{$pId}>">
+				<input type="text" class="value type" name="type" value="product">
 			</div>
 		</div>
 		<div class="row cl">
 			<div class="col-9 col-offset-2">
-				<input class="btn btn-primary radius" type="submit" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
+				<input class="btn btn-primary radius" type="button" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
 			</div>
+
 		</div>
-	</form>
+	</div>
 </div>
 <!--_footer 作为公共模版分离出去-->
 <script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script> 
@@ -58,7 +63,30 @@
 <script type="text/javascript" src="lib/jquery.validation/1.14.0/messages_zh.js"></script>
 <script type="text/javascript">
 $(function(){
-	
+	$(".btn-primary").click(function(){
+		var id = $(".id").val();
+		var pId = $(".pId").val();
+		var type = $(".type").val();
+		var name = $.trim($("input[name=name]").val());
+		var remark = $.trim($("textarea[name=remark]").val());
+		$.ajax({
+			url:"<{spUrl c=backFuns a=category}>",
+			type:"post",
+			data:{id:id,pId:pId,type:type,name:name,remark:remark},
+			success:function(data){
+				if(data == "10013"){
+					alert("請選擇添加的節點位置");
+					return false;
+				}
+				callBackParentFunction();
+				console.log(data);
+			}
+		})
+	})
+
+	function callBackParentFunction(){
+		parent.refresh();
+	}
 });
 </script>
 </body>
