--- a/tpl/back/index.html
+++ b/tpl/back/index.html
@@ -89,12 +89,12 @@
 		</dd>
 	</dl>
 		<dl id="menu-product">
-			<dt><i class="Hui-iconfont">&#xe620;</i> 产品管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dt><i class="Hui-iconfont">&#xe620;</i> 產品管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
 					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='product-brand'}>" data-title="品牌管理" href="javascript:void(0)">品牌管理</a></li>
-					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='product-category'}>" data-title="分类管理" href="javascript:void(0)">分类管理</a></li>
-					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='product-list'}>" data-title="产品管理" href="javascript:void(0)">产品管理</a></li>
+					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='product-category'}>" data-title="分類管理" href="javascript:void(0)">分類管理</a></li>
+					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='product-list'}>" data-title="產品管理" href="javascript:void(0)">產品管理</a></li>
 			</ul>
 		</dd>
 	</dl>
