--- a/tpl/back/product-category-add.html
+++ b/tpl/back/product-category-add.html
@@ -79,13 +79,13 @@ $(function(){
 					return false;
 				}
 				callBackParentFunction();
-				console.log(data);
+				//console.log(data);
 			}
 		})
 	})
 
 	function callBackParentFunction(){
-		parent.refresh();
+		parent.categoryData();
 	}
 });
 </script>
