--- a/tpl/back/product-wine-add.html
+++ b/tpl/back/product-wine-add.html
@@ -30,95 +30,104 @@
 </head>
 <body>
 <div class="page-container">
-	<form action="" method="post" class="form form-horizontal" id="form-article-add">
+	<form action="<{spUrl c=backFuns a=product}>" method="post" class="form form-horizontal" id="form-article-add">
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>品名：</label>
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>酒名：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="" name="">
+				<input type="text" class="input-text" value="" placeholder="" id="" name="name">
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>分類欄目：</label>
+			<label class="form-label col-xs-4 col-sm-2">分類：</label>
 			<div class="formControls col-xs-8 col-sm-9"> 
-				<input type="text" name="" value="" class="input-text">
+				<input type="text" name="category" value="<{$category}>" disabled="disabled" class="input-text">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">產地：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="" id="" placeholder="" value="" class="input-text">
+				<input type="text" name="origin" id="" placeholder="" value="" class="input-text">
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">所屬供應商：</label>
+			<label class="form-label col-xs-4 col-sm-2">酒莊名：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="" id="" placeholder="" value="" class="input-text">
+				<input type="text" name="winery" id="" placeholder="" value="" class="input-text">
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">价格计算单位：</label>
+			<label class="form-label col-xs-4 col-sm-2">酒莊網址：</label>
+			<div class="formControls col-xs-8 col-sm-9">
+				<input type="text" name="winerySite" id="" placeholder="" value="" class="input-text">
+			</div>
+		</div>
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-2">葡萄：</label>
+			<div class="formControls col-xs-8 col-sm-9">
+				<input type="text" name="grape" id="" placeholder="" value="" class="input-text">
+			</div>
+		</div>
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-2">年份：</label>
+			<div class="formControls col-xs-8 col-sm-9">
+				<input type="text" name="year" id="" placeholder="" value="" class="input-text">
+			</div>
+		</div>
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-2">最佳年份：</label>
+			<div class="formControls col-xs-8 col-sm-9">
+				<input type="text" name="bestYear" id="" placeholder="" value="" class="input-text">
+			</div>
+		</div>
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-2">價格：</label>
 			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
-				<select class="select">
-					<option>请选择</option>
-					<option value="1">件</option>
-					<option value="2">斤</option>
-					<option value="3">KG</option>
-					<option value="4">吨</option>
-					<option value="5">套</option>
+				<select class="select" name="price">
+					<option>請選擇</option>
+					<option value="0"><$50</option>
+					<option value="1">$51-$100</option>
+					<option value="2">$101-$150</option>
+					<option value="3">$151-$200</option>
+					<option value="4">$201-$300</option>
+					<option value="5">$301-$400</option>
+					<option value="6">>$400</option>
 				</select>
 				</span> </div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">產品重量：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="" id="" placeholder="" value="" class="input-text" style="width:90%">
-				kg</div>
+			<label class="form-label col-xs-4 col-sm-2">配對食物：</label>
+			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
+				<select class="select" name="food">
+					<option>請選擇</option>
+					<option value="0">牛</option>
+					<option value="1">羊</option>
+					<option value="2">豬</option>
+					<option value="3">家禽</option>
+					<option value="4">海鮮</option>
+					<option value="5">小食</option>
+					<option value="6">甜品</option>
+					<option value="7">頭盤</option>
+					<option value="8">街頭食品</option>
+					<option value="9">各國菜式</option>
+				</select>
+				</span> </div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">產品展示價格：</label>
+			<label class="form-label col-xs-4 col-sm-2">供應商：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="" id="" placeholder="" value="" class="input-text" style="width:90%">
-				元</div>
+				<input type="text" name="supplier" id="" placeholder="" value="" class="input-text">
+			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">市場價格：</label>
+			<label class="form-label col-xs-4 col-sm-2">供應商網址：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="" id="" placeholder="" value="" class="input-text" style="width:90%">
-				元</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">成本價格：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="" id="" placeholder="" value="" class="input-text" style="width:90%">
-				元</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">最低銷售價格：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="" id="" placeholder="" value="" class="input-text" style="width:90%">
-				元</div>
+				<input type="text" name="supplierSite" id="" placeholder="" value="" class="input-text">
+			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">關鍵字：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="" id="" placeholder="多个关键字用英文逗号隔开，限10个关键字" value="" class="input-text">
-			</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">產品摘要：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<textarea name="" cols="" rows="" class="textarea"  placeholder="说点什么...最少输入10个字符" datatype="*10-100" dragonfly="true" nullmsg="备注不能为空！" onKeyUp="$.Huitextarealength(this,200)"></textarea>
-				<p class="textarea-numberbar"><em class="textarea-length">0</em>/200</p>
-			</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">縮略圖：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<div class="uploader-thum-container">
-					<div id="fileList" class="uploader-list"></div>
-					<div id="filePicker">產品圖片</div>
-					<button id="btn-star" class="btn btn-default btn-uploadstar radius ml-10">開始上傳</button>
-				</div>
+				<input type="text" name="keyword" id="" placeholder="多个关键字用英文逗号隔开，限10个关键字" value="" class="input-text">
 			</div>
 		</div>
 		<div class="row cl">
@@ -143,14 +152,8 @@
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">詳細內容：</label>
-			<div class="formControls col-xs-8 col-sm-9"> 
-				<script id="editor" type="text/plain" style="width:100%;height:400px;"></script> 
-			</div>
-		</div>
-		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
-				<button onClick="article_save();" class="btn btn-secondary radius" type="button"><i class="Hui-iconfont">&#xe632;</i> 保存</button>
+				<button class="btn btn-secondary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存</button>
 				<button onClick="layer_close();" class="btn btn-default radius" type="button">&nbsp;&nbsp;取消&nbsp;&nbsp;</button>
 			</div>
 		</div>
@@ -172,6 +175,7 @@
 <script type="text/javascript" src="lib/ueditor/1.4.3/ueditor.config.js"></script>
 <script type="text/javascript" src="lib/ueditor/1.4.3/ueditor.all.min.js"> </script>
 <script type="text/javascript" src="lib/ueditor/1.4.3/lang/zh-cn/zh-cn.js"></script>
+
 <script type="text/javascript">
 $(function(){
 	$('.skin-minimal input').iCheck({
@@ -242,8 +246,10 @@ $(function(){
 	});
 	
 	// 文件上传成功，给item添加成功class, 用样式标记上传成功。
-	uploader.on( 'uploadSuccess', function( file ) {
+	uploader.on( 'uploadSuccess', function( file,response) {
 		$( '#'+file.id ).addClass('upload-state-success').find(".state").text("已上传");
+		var imgurl = response._raw; //上传图片的路径
+    	alert(imgurl);
 	});
 	
 	// 文件上传失败，显示上传出错。
@@ -492,6 +498,12 @@ $(function(){
         uploader.on('ready', function() {
             window.uploader = uploader;
         });
+
+        uploader.on( 'uploadSuccess', function( file,response) {
+		$( '#'+file.id ).addClass('upload-state-success').find(".state").text("已上传");
+		//var obj = eval('(' + response + ')'); //上传图片的路径
+    	console.log(response);
+	});
 
         // 当有文件添加进来时执行，负责view的创建
         function addFile( file ) {
@@ -757,7 +769,7 @@ $(function(){
                 case 'finish':
                     stats = uploader.getStats();
                     if ( stats.successNum ) {
-                        alert( '上传成功' );
+                        //alert( '上传成功' );
                     } else {
                         // 没有成功的图片，重设
                         state = 'done';
@@ -856,7 +868,7 @@ $(function(){
 })( jQuery );
 
 $(function(){
-	var ue = UE.getEditor('editor');
+	//var ue = UE.getEditor('editor');
 });
 </script>
 </body>
