--- a/tpl/back/product-list-iframe.html
+++ b/tpl/back/product-list-iframe.html
@@ -203,6 +203,8 @@ $(function(){
 			type:"post",
 			data:{category_id:category_id,category_pId:category_pId},
 			success:function(data){
+				$PRICE = Array("<$50","$51-$100","$101-$150","$151-$200","$201-$300","$301-$400",">$400");
+				$FOOD = Array("牛","羊","豬","家禽","海鮮","小食","甜品","頭盤","街頭食品","各國菜式");
 				if(data != ""){
 					var dataObj = eval('(' + data + ')');
 				for(i=0;i<dataObj.length;i++){
@@ -210,13 +212,13 @@ $(function(){
 					<tr class="text-c">\
 						<td><input type="checkbox" value="" name=""></td>\
 						<td>'+dataObj[i]['id']+'</td>\
-						<td class="text-l"><a style="text-decoration:none" onclick="productDetail(\''+dataObj[i]['name']+'\',\''+dataObj[i]['id']+'\')" class="productName" href="javascript:;">'+dataObj[i]['name']+'</a></td>\
+						<td class="text-l"><a style="text-decoration:underline" onclick="productDetail(\''+dataObj[i]['name']+'\',\''+dataObj[i]['id']+'\')" class="productName" href="javascript:;">'+dataObj[i]['name']+'</a></td>\
 						<td>'+dataObj[i]['origin']+'</td>\
 						<td>'+dataObj[i]['winery']+'</td>\
 						<td>'+dataObj[i]['grape']+'</td>\
 						<td>'+dataObj[i]['year']+'</td>\
-						<td>'+dataObj[i]['price']+'</td>\
-						<td>'+dataObj[i]['food']+'</td>\
+						<td>'+$PRICE[dataObj[i]['price']]+'</td>\
+						<td>'+$FOOD[dataObj[i]['food']]+'</td>\
 						<td>'+dataObj[i]['supplier']+'</td>\
 						<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<{spUrl c=backFuns a=articleDataEdit columnId=<{$column}> title=<{$title}>}>&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
 					</tr>'
