--- a/tpl/back/product-list.html
+++ b/tpl/back/product-list.html
@@ -119,7 +119,8 @@ function product_add(title,url){
 	var index = layer.open({
 		type: 2,
 		title: title,
-		content: url
+		content: url,
+		area: '500px'
 	});
 	layer.full(index);
 }
