--- a/tpl/productDetail.html
+++ b/tpl/productDetail.html
@@ -59,7 +59,7 @@ a:active{color:#1d7400;}
 
 /* smallImg */
 
-.smallImg{position:relative; height:52px; margin-top:1px; background-color:#F1F0F0; padding:6px 5px; width:390px; overflow:hidden;float:left;}
+.smallImg{position:relative; height:52px; margin-top:1px; /*background-color:#F1F0F0;*/ padding:6px 5px; width:390px; overflow:hidden;float:left;}
 
 .scrollbutton{width:14px; height:50px; overflow:hidden; position:relative; float:left; cursor:pointer; }
 
