--- a/tpl/back/article-list.html
+++ b/tpl/back/article-list.html
@@ -44,18 +44,18 @@
 			<thead>
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value=""></th>
-					<th width="80">ID</th>
+					<th>ID</th>
 					<th>標題</th>
-					<th width="80">類型</th>
-					<th width="80">排序值</th>
+					<th>類型</th>
+					<th>排序值</th>
 					<th>關鍵詞</th>
-					<th width="120">創建時間</th>
+					<th>創建時間</th>
 					<th>更新時間</th>
-					<th width="75">作者</th>
+					<th>作者</th>
 					<th>創建者</th>
 					<th>允許評論</th>
-					<th width="60">狀態</th>
-					<th width="120">操作</th>
+					<th>狀態</th>
+					<th>操作</th>
 				</tr>
 			</thead>
 			<tbody>
