--- a/tpl/back/product-food-add.html
+++ b/tpl/back/product-food-add.html
@@ -32,96 +32,39 @@
 <div class="page-container">
 	<form action="<{spUrl c=backFuns a=product}>" method="post" class="form form-horizontal" id="form-article-add">
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>酒名：</label>
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>品名：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="text" class="input-text" value="" placeholder="" id="" name="name">
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">產地：</label>
+			<label class="form-label col-xs-4 col-sm-2">國家(產地)：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="text" name="origin" id="" placeholder="" value="" class="input-text">
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">酒莊名：</label>
+			<label class="form-label col-xs-4 col-sm-2">菜式：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="text" name="winery" id="" placeholder="" value="" class="input-text">
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">酒莊網址：</label>
+			<label class="form-label col-xs-4 col-sm-2">煮法：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="text" name="winery_site" id="" placeholder="" value="" class="input-text">
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">葡萄：</label>
+			<label class="form-label col-xs-4 col-sm-2">味道：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="text" name="grape" id="" placeholder="" value="" class="input-text">
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">年份：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="year" id="" placeholder="" value="" class="input-text">
-			</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">最佳年份：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="best_year" id="" placeholder="" value="" class="input-text">
-			</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">價格：</label>
-			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
-				<select class="select" name="price">
-					<option>請選擇</option>
-					<option value="0"><$50</option>
-					<option value="1">$51-$100</option>
-					<option value="2">$101-$150</option>
-					<option value="3">$151-$200</option>
-					<option value="4">$201-$300</option>
-					<option value="5">$301-$400</option>
-					<option value="6">>$400</option>
-				</select>
-				</span> </div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">配對食物：</label>
-			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
-				<select class="select" name="food">
-					<option>請選擇</option>
-					<option value="0">牛</option>
-					<option value="1">羊</option>
-					<option value="2">豬</option>
-					<option value="3">家禽</option>
-					<option value="4">海鮮</option>
-					<option value="5">小食</option>
-					<option value="6">甜品</option>
-					<option value="7">頭盤</option>
-					<option value="8">街頭食品</option>
-					<option value="9">各國菜式</option>
-				</select>
-				</span> </div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">供應商：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="supplier" id="" placeholder="" value="" class="input-text">
-			</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">供應商網址：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="supplier_site" id="" placeholder="" value="" class="input-text">
-			</div>
-		</div>
-		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">關鍵字：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="keyword" id="" placeholder="多个关键字用英文逗号隔开，限10个关键字" value="" class="input-text">
+				<input type="text" name="keyword" id="" placeholder="多個關鍵字請用英文逗號隔開，限10個關鍵字" value="" class="input-text">
 			</div>
 		</div>
 		<div class="row cl">
