--- a/tpl/back/product-list-iframe.html
+++ b/tpl/back/product-list-iframe.html
@@ -19,6 +19,11 @@
 <script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ></script>
 <script>DD_belatedPNG.fix('*');</script>
 <![endif]-->
+<style>
+	html,body{
+		overflow: auto!important;
+	}
+</style>
 <title>產品列表</title>
 </head>
 <body>
@@ -31,7 +36,7 @@
 			<input type="text" name="" id="" placeholder=" 产品名称" style="width:250px" class="input-text">
 			<button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜产品</button>
 		</div>
-		<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius addProduct" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加产品</a></span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
+		<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量刪除</a> <a class="btn btn-primary radius addProduct" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加產品</a></span> <span class="r">共有數據：<strong class="rows">0</strong> 條</span> </div>
 		<div class="mt-20">
 			<table class="dataTable table table-border table-bordered table-bg table-hover table-sort">
 				<thead>
@@ -207,6 +212,7 @@ $(function(){
 				$FOOD = Array("牛","羊","豬","家禽","海鮮","小食","甜品","頭盤","街頭食品","各國菜式");
 				if(data != ""){
 					var dataObj = eval('(' + data + ')');
+					$(".rows").html(dataObj.length);
 				for(i=0;i<dataObj.length;i++){
 					var str = '\
 					<tr class="text-c">\
