--- a/tpl/back/product-food-add.html
+++ b/tpl/back/product-food-add.html
@@ -46,19 +46,19 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">菜式：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="winery" id="" placeholder="" value="" class="input-text">
+				<input type="text" name="type" id="" placeholder="" value="" class="input-text">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">煮法：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="winery_site" id="" placeholder="" value="" class="input-text">
+				<input type="text" name="method" id="" placeholder="" value="" class="input-text">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">味道：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="grape" id="" placeholder="" value="" class="input-text">
+				<input type="text" name="taste" id="" placeholder="" value="" class="input-text">
 			</div>
 		</div>
 		<div class="row cl">
