--- a/tpl/back/index.html
+++ b/tpl/back/index.html
@@ -98,6 +98,14 @@
 			</ul>
 		</dd>
 	</dl>
+		<dl id="menu-picture">
+			<dt><i class="Hui-iconfont">&#xe62b;</i> 論壇<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dd>
+				<ul>
+					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='forum-food-option'}>" data-title="食物選項" href="javascript:void(0)">食物選項管理</a></li>
+			</ul>
+		</dd>
+	</dl>
 		<dl id="menu-comments">
 			<dt><i class="Hui-iconfont">&#xe622;</i> 评论管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
