--- a/tpl/back/product-list-iframe_food.html
+++ b/tpl/back/product-list-iframe_food.html
@@ -43,14 +43,12 @@
 					<tr class="text-c">
 						<th><input name="" type="checkbox" value=""></th>
 						<th>ID</th>
-						<th>酒名</th>
-						<th>產地</th>
-						<th>酒莊名</th>
-						<th>葡萄</th>
-						<th>年份</th>
-						<th>價格</th>
-						<th>配對食物</th>
-						<th>供應商</th>
+						<th>品名</th>
+						<th>國家(產地)</th>
+						<th>菜式</th>
+						<th>煮法</th>
+						<th>味道</th>
+						<th>關鍵字</th>
 						<th>操作</th>
 					</tr>
 				</thead>
@@ -183,7 +181,7 @@ function article_shenqing(obj,id){
 }
 
 function productDetail(name,id){
-	parent.product_add('產品詳情--'+name,'<{spUrl c=frontFuns a=productDetial}>&id='+id);
+	parent.product_add('產品詳情--'+name,'<{spUrl c=frontFuns a=productDetial}>&id='+id+'&product=food');
 }
 
 $(function(){
@@ -208,8 +206,6 @@ $(function(){
 			type:"post",
 			data:{category_id:category_id,category_pId:category_pId},
 			success:function(data){
-				$PRICE = Array("<$50","$51-$100","$101-$150","$151-$200","$201-$300","$301-$400",">$400");
-				$FOOD = Array("牛","羊","豬","家禽","海鮮","小食","甜品","頭盤","街頭食品","各國菜式");
 				if(data != ""){
 					var dataObj = eval('(' + data + ')');
 					$(".rows").html(dataObj.length);
@@ -220,12 +216,10 @@ $(function(){
 						<td>'+dataObj[i]['id']+'</td>\
 						<td class="text-l"><a style="text-decoration:underline" onclick="productDetail(\''+dataObj[i]['name']+'\',\''+dataObj[i]['id']+'\')" class="productName" href="javascript:;">'+dataObj[i]['name']+'</a></td>\
 						<td>'+dataObj[i]['origin']+'</td>\
-						<td>'+dataObj[i]['winery']+'</td>\
-						<td>'+dataObj[i]['grape']+'</td>\
-						<td>'+dataObj[i]['year']+'</td>\
-						<td>'+$PRICE[dataObj[i]['price']]+'</td>\
-						<td>'+$FOOD[dataObj[i]['food']]+'</td>\
-						<td>'+dataObj[i]['supplier']+'</td>\
+						<td>'+dataObj[i]['type']+'</td>\
+						<td>'+dataObj[i]['method']+'</td>\
+						<td>'+dataObj[i]['taste']+'</td>\
+						<td>'+dataObj[i]['keyword']+'</td>\
 						<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<{spUrl c=backFuns a=articleDataEdit columnId=<{$column}> title=<{$title}>}>&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
 					</tr>'
 					$(".dataTable tbody").append(str);
