--- a/tpl/back/product-list-iframe_wine.html
+++ b/tpl/back/product-list-iframe_wine.html
@@ -1,28 +1,4 @@
-<?php
-/* Smarty version 3.1.30, created on 2017-07-28 16:12:35
-  from "D:\xampp\htdocs\redwine\tpl\back\product-list-iframe.html" */
-
-/* @var Smarty_Internal_Template $_smarty_tpl */
-if ($_smarty_tpl->_decodeProperties($_smarty_tpl, array (
-  'version' => '3.1.30',
-  'unifunc' => 'content_597af1f3dfead8_80412453',
-  'has_nocache_code' => false,
-  'file_dependency' => 
-  array (
-    'f3593153fdecc5f0c3782fa6139710ecc4912379' => 
-    array (
-      0 => 'D:\\xampp\\htdocs\\redwine\\tpl\\back\\product-list-iframe.html',
-      1 => 1501229553,
-      2 => 'file',
-    ),
-  ),
-  'includes' => 
-  array (
-  ),
-),false)) {
-function content_597af1f3dfead8_80412453 (Smarty_Internal_Template $_smarty_tpl) {
-?>
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 <head>
 <meta charset="utf-8">
@@ -31,12 +7,8 @@ function content_597af1f3dfead8_80412453 (Smarty_Internal_Template $_smarty_tpl)
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 <meta http-equiv="Cache-Control" content="no-siteapp" />
 <!--[if lt IE 9]>
-<?php echo '<script'; ?>
- type="text/javascript" src="lib/html5shiv.js"><?php echo '</script'; ?>
->
-<?php echo '<script'; ?>
- type="text/javascript" src="lib/respond.min.js"><?php echo '</script'; ?>
->
+<script type="text/javascript" src="lib/html5shiv.js"></script>
+<script type="text/javascript" src="lib/respond.min.js"></script>
 <![endif]-->
 <link rel="stylesheet" type="text/css" href="static/h-ui/css/H-ui.min.css" />
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/H-ui.admin.css" />
@@ -44,12 +16,8 @@ function content_597af1f3dfead8_80412453 (Smarty_Internal_Template $_smarty_tpl)
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/skin/default/skin.css" id="skin" />
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css" />
 <!--[if IE 6]>
-<?php echo '<script'; ?>
- type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ><?php echo '</script'; ?>
->
-<?php echo '<script'; ?>
->DD_belatedPNG.fix('*');<?php echo '</script'; ?>
->
+<script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ></script>
+<script>DD_belatedPNG.fix('*');</script>
 <![endif]-->
 <style>
 	html,body{
@@ -103,31 +71,16 @@ function content_597af1f3dfead8_80412453 (Smarty_Internal_Template $_smarty_tpl)
 	</div>
 </div>
 <!--_footer 作为公共模版分离出去-->
-<?php echo '<script'; ?>
- type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"><?php echo '</script'; ?>
-> 
-<?php echo '<script'; ?>
- type="text/javascript" src="lib/layer/2.4/layer.js"><?php echo '</script'; ?>
->
-<?php echo '<script'; ?>
- type="text/javascript" src="static/h-ui/js/H-ui.min.js"><?php echo '</script'; ?>
-> 
-<?php echo '<script'; ?>
- type="text/javascript" src="static/h-ui.admin/js/H-ui.admin.js"><?php echo '</script'; ?>
-> <!--/_footer 作为公共模版分离出去-->
+<script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script> 
+<script type="text/javascript" src="lib/layer/2.4/layer.js"></script>
+<script type="text/javascript" src="static/h-ui/js/H-ui.min.js"></script> 
+<script type="text/javascript" src="static/h-ui.admin/js/H-ui.admin.js"></script> <!--/_footer 作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<?php echo '<script'; ?>
- type="text/javascript" src="lib/My97DatePicker/4.8/WdatePicker.js"><?php echo '</script'; ?>
-> 
-<?php echo '<script'; ?>
- type="text/javascript" src="lib/datatables/1.10.0/jquery.dataTables.min.js"><?php echo '</script'; ?>
-> 
-<?php echo '<script'; ?>
- type="text/javascript" src="lib/laypage/1.2/laypage.js"><?php echo '</script'; ?>
->
-<?php echo '<script'; ?>
- type="text/javascript">
+<script type="text/javascript" src="lib/My97DatePicker/4.8/WdatePicker.js"></script> 
+<script type="text/javascript" src="lib/datatables/1.10.0/jquery.dataTables.min.js"></script> 
+<script type="text/javascript" src="lib/laypage/1.2/laypage.js"></script>
+<script type="text/javascript">
 
 
 /*资讯-添加*/
@@ -152,12 +105,10 @@ function article_edit(title,url,id,w,h){
 /*资讯-删除*/
 function article_del(obj,id){
 	layer.confirm('确认要删除吗？',function(index){
-		var column = '<?php echo $_smarty_tpl->tpl_vars['column']->value;?>
-';
+		var column = '<{$column}>';
 		$.ajax({
 			type: 'POST',
-			url: '<?php echo $_smarty_tpl->smarty->registered_plugins[Smarty::PLUGIN_FUNCTION]['spUrl'][0][0]->__template_spUrl(array('c'=>'backFuns','a'=>'articleDelete'),$_smarty_tpl);?>
-',
+			url: '<{spUrl c=backFuns a=articleDelete}>',
 			data:{column:column,id:id},
 			success: function(data){
 				if(data == "done"){
@@ -192,11 +143,9 @@ function article_shenhe(obj,id){
 
 function displaySwitch(id,act){
 	$.ajax({
-		url:"<?php echo $_smarty_tpl->smarty->registered_plugins[Smarty::PLUGIN_FUNCTION]['spUrl'][0][0]->__template_spUrl(array('c'=>'backFuns','a'=>'displaySwitch'),$_smarty_tpl);?>
-",
+		url:"<{spUrl c=backFuns a=displaySwitch}>",
 		type:"post",
-		data:{id:id,act:act,column:"<?php echo $_smarty_tpl->tpl_vars['column']->value;?>
-"},
+		data:{id:id,act:act,column:"<{$column}>"},
 		success:function(data){
 			if(data == "ok"){
 				return "ok";
@@ -234,25 +183,20 @@ function article_shenqing(obj,id){
 }
 
 function productDetail(name,id){
-	parent.product_add('產品詳情--'+name,'<?php echo $_smarty_tpl->smarty->registered_plugins[Smarty::PLUGIN_FUNCTION]['spUrl'][0][0]->__template_spUrl(array('c'=>'frontFuns','a'=>'productDetial'),$_smarty_tpl);?>
-&id='+id);
+	parent.product_add('產品詳情--'+name,'<{spUrl c=frontFuns a=productDetial}>&id='+id+'&product=wine');
 }
 
 $(function(){
-	var category_id = "<?php echo $_smarty_tpl->tpl_vars['category_id']->value;?>
-";
-	var category_pId = "<?php echo $_smarty_tpl->tpl_vars['category_pId']->value;?>
-";
-	var category_name = "<?php echo $_smarty_tpl->tpl_vars['category_name']->value;?>
-";
+	var category_id = "<{$category_id}>";
+	var category_pId = "<{$category_pId}>";
+	var category_name = "<{$category_name}>";
 
 	$(".addProduct").click(function(){
 		if(category_id == "" || category_pId == ""){
 			alert("請選擇要添加到分類欄目的位置");
 			return false;
 		}
-		parent.product_add('添加產品--'+category_name,'<?php echo $_smarty_tpl->smarty->registered_plugins[Smarty::PLUGIN_FUNCTION]['spUrl'][0][0]->__template_spUrl(array('c'=>'backFuns','a'=>'productAddPage'),$_smarty_tpl);?>
-&category_id='+category_id+'&category_pId='+category_pId);
+		parent.product_add('添加產品--'+category_name,'<{spUrl c=backFuns a=productAddPage}>&category_id='+category_id+'&category_pId='+category_pId);
 	})
 
 	
@@ -260,8 +204,7 @@ $(function(){
 
 	function dataHandle(category_id,category_pId){
 		$.ajax({
-			url:"<?php echo $_smarty_tpl->smarty->registered_plugins[Smarty::PLUGIN_FUNCTION]['spUrl'][0][0]->__template_spUrl(array('c'=>'backFuns','a'=>'productQuery'),$_smarty_tpl);?>
-",
+			url:"<{spUrl c=backFuns a=productQuery}>",
 			type:"post",
 			data:{category_id:category_id,category_pId:category_pId},
 			success:function(data){
@@ -283,14 +226,7 @@ $(function(){
 						<td>'+$PRICE[dataObj[i]['price']]+'</td>\
 						<td>'+$FOOD[dataObj[i]['food']]+'</td>\
 						<td>'+dataObj[i]['supplier']+'</td>\
-						<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<?php ob_start();
-echo $_smarty_tpl->tpl_vars['column']->value;
-$_prefixVariable1=ob_get_clean();
-ob_start();
-echo $_smarty_tpl->tpl_vars['title']->value;
-$_prefixVariable2=ob_get_clean();
-echo $_smarty_tpl->smarty->registered_plugins[Smarty::PLUGIN_FUNCTION]['spUrl'][0][0]->__template_spUrl(array('c'=>'backFuns','a'=>'articleDataEdit','columnId'=>$_prefixVariable1,'title'=>$_prefixVariable2),$_smarty_tpl);?>
-&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
+						<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<{spUrl c=backFuns a=articleDataEdit columnId=<{$column}> title=<{$title}>}>&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
 					</tr>'
 					$(".dataTable tbody").append(str);
 				}
@@ -315,8 +251,6 @@ echo $_smarty_tpl->smarty->registered_plugins[Smarty::PLUGIN_FUNCTION]['spUrl'][
 dataHandle(category_id,category_pId);
 })
 
-<?php echo '</script'; ?>
-> 
+</script> 
 </body>
-</html><?php }
-}
+</html>
